--- a/css/main.css
+++ b/css/main.css
@@ -52,10 +52,28 @@ body {
 }
 
 .container {
-  width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
-  margin: 0 auto;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+@media screen and (min-width: 480px) {
+  .container {
+    width: 480px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1200px;
+  }
 }
 
 .btn {
@@ -404,23 +422,23 @@ body {
 
 .header {
   background-color: var(--header-color);
-  padding-top: 25px;
-  padding-bottom: 25px;
+  padding-top: 16px;
+  padding-bottom: 16px;
   border-bottom: 1px solid #ececec;
 }
 
-.header__logo {
-  font-family: Raleway;
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
-  letter-spacing: 0.03em;
-  color: var(--accent-color);
-  margin-right: 90px;
+@media screen and (min-width: 768px) {
+  .header {
+    padding-top: 26px;
+    padding-bottom: 26px;
+  }
 }
 
-.header__logo--studio {
-  color: var(--secondary-title-color);
+@media screen and (min-width: 1200px) {
+  .header {
+    padding-top: 24px;
+    padding-bottom: 25px;
+  }
 }
 
 .header-container {
@@ -428,102 +446,232 @@ body {
   align-items: center;
 }
 
-.menu {
-  display: flex;
-}
-
-.header-nav {
-  display: flex;
-  align-items: center;
-}
-
-.contacts {
-  display: flex;
-  margin-left: auto;
-}
-
-.menu__link {
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  position: relative;
-  transition: color var(--time) var(--cubic-bezier);
-}
-
-.menu__link:hover, .menu__link:focus {
+.header__logo {
+  font-family: Raleway;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
   color: var(--accent-color);
 }
 
-.menu__page-link {
-  color: var(--accent-color);
+@media screen and (min-width: 768px) {
+  .header__logo {
+    margin-right: 88px;
+  }
 }
 
-.menu__link.menu__page-link::after {
-  content: "";
-  width: 100%;
-  position: absolute;
-  height: 4px;
-  display: block;
-  border-radius: 2px;
-  background-color: var(--accent-color);
-  bottom: -32px;
+@media screen and (min-width: 1200px) {
+  .header__logo {
+    font-size: 26px;
+    line-height: 1.19;
+    margin-right: 93px;
+  }
 }
 
-.menu__link--color {
+.header__logo--studio {
   color: var(--secondary-title-color);
 }
 
-.menu__item:not(:last-child) {
-  margin-right: 50px;
+.menu {
+  display: none;
 }
 
-.contacts__tel {
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  color: var(--primary-text-color);
-  display: flex;
-  align-items: center;
+@media screen and (min-width: 768px) {
+  .menu {
+    display: flex;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .header-nav {
+    display: flex;
+    align-items: center;
+  }
+}
+
+.contacts {
+  display: none;
+}
+
+@media screen and (min-width: 768px) {
+  .contacts {
+    display: block;
+    margin-left: auto;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .contacts {
+    display: flex;
+    margin-left: auto;
+  }
+}
+
+.burger-btn {
+  background-color: transparent;
+  cursor: pointer;
+  border: none;
+  padding: 0;
+  width: 40px;
+  height: 40px;
+}
+
+@media screen and (min-width: 768px) {
+  .burger-btn {
+    display: none;
+  }
+}
+
+.burger-icon {
   transition: color var(--time) var(--cubic-bezier);
 }
 
-.contacts__tel:hover, .contacts__tel:focus {
-  color: var(--accent-color);
+.burger-icon:hover, .burger-icon:focus {
+  fill: var(--accent-color);
 }
 
-.contacts__mail {
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  color: var(--primary-text-color);
-  margin-right: 30px;
-  display: flex;
-  align-items: center;
+.mobile-menu {
+  position: fixed;
+  z-index: 100;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  padding: 48px 40px;
+  background-color: #ffffff;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+  transition: opacity var(--time) var(--cubic-bezier), visibility var(--time) var(--cubic-bezier);
+}
+
+.mobile-menu.is-open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: all;
+}
+
+.close-btn {
+  cursor: pointer;
+  width: 40px;
+  height: 40px;
+  padding: 0;
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  border: none;
+  background-color: transparent;
+}
+
+.close-icon {
   transition: color var(--time) var(--cubic-bezier);
 }
 
-.contacts__mail:hover, .contacts__mail:focus {
-  color: var(--accent-color);
-}
-
-.contacts__icon {
-  margin-right: 10px;
-  vertical-align: middle;
-  fill: var(--primary-text-color);
-  transition: fill var(--time) var(--cubic-bezier);
-}
-
-.contacts__tel:hover .contacts__icon,
-.contacts__tel:focus .contacts__icon {
+.close-icon:hover, .close-icon:focus {
   fill: var(--accent-color);
 }
 
-.contacts__mail:hover .contacts__icon,
-.contacts__mail:focus .contacts__icon {
-  fill: var(--accent-color);
+@media screen and (min-width: 768px) {
+  .menu__link {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    position: relative;
+    transition: color var(--time) var(--cubic-bezier);
+  }
+  .menu__link:hover, .menu__link:focus {
+    color: var(--accent-color);
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .menu__page-link {
+    color: var(--accent-color);
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .menu__link.menu__page-link::after {
+    content: "";
+    width: 100%;
+    position: absolute;
+    height: 4px;
+    display: block;
+    border-radius: 2px;
+    background-color: var(--accent-color);
+    bottom: -32px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .menu__link--color {
+    color: var(--secondary-title-color);
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .menu__item:not(:last-child) {
+    margin-right: 50px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .contacts__tel {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    color: var(--primary-text-color);
+    display: flex;
+    align-items: center;
+    transition: color var(--time) var(--cubic-bezier);
+  }
+  .contacts__tel:hover, .contacts__tel:focus {
+    color: var(--accent-color);
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .contacts__mail {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    color: var(--primary-text-color);
+    margin-bottom: 10px;
+    display: flex;
+    align-items: center;
+    transition: color var(--time) var(--cubic-bezier);
+  }
+  .contacts__mail:hover, .contacts__mail:focus {
+    color: var(--accent-color);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .contacts__mail {
+    margin-right: 30px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .contacts__icon {
+    margin-right: 10px;
+    vertical-align: middle;
+    fill: var(--primary-text-color);
+    transition: fill var(--time) var(--cubic-bezier);
+  }
+  .contacts__tel:hover .contacts__icon,
+  .contacts__tel:focus .contacts__icon {
+    fill: var(--accent-color);
+  }
+  .contacts__mail:hover .contacts__icon,
+  .contacts__mail:focus .contacts__icon {
+    fill: var(--accent-color);
+  }
 }
 
 .hero {
