--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -15,6 +15,7 @@
 .header-container {
   display: flex;
   align-items: center;
+  justify-content: space-between;
 }
 .header__logo {
   font-family: Raleway;
@@ -93,6 +94,9 @@
   pointer-events: none;
   transition: opacity var(--time) var(--cubic-bezier),
     visibility var(--time) var(--cubic-bezier);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 .mobile-menu.is-open {
   opacity: 1;
@@ -118,24 +122,108 @@
   }
 }
 
-.menu__link {
-  @media screen and (min-width: 768px) {
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
+.mobile-menu__list {
+  display: flex;
+  flex-direction: column;
+}
+.mob-menu__item {
+  &:not(:last-child) {
+    margin-bottom: 32px;
+  }
+}
+.mob-menu__link {
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.18;
+  text-align: center;
+  letter-spacing: 0.02em;
+  position: relative;
+  transition: color var(--time) var(--cubic-bezier);
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+  }
+}
+.mob-contacts {
+  display: flex;
+  flex-direction: column;
+}
+.mob-contacts__item {
+  &:not(:last-child) {
+    margin-bottom: 32px;
+  }
+}
+.cont-menu {
+  padding-bottom: 64px;
+}
+.mob-contacts__tel {
+  @media screen and (max-width: 479px) {
+    font-size: 8vw;
+  }
+  font-weight: 500;
+  font-size: 34px;
+  line-height: 1.18;
+  letter-spacing: 0.02em;
+  position: relative;
+  color: var(--primary-text-color);
+  transition: color var(--time) var(--cubic-bezier);
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+  }
+}
+.mob-contacts__mail {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  color: var(--primary-text-color);
+  position: relative;
+  transition: color var(--time) var(--cubic-bezier);
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+  }
+}
+
+.soc-menu__list {
+  display: flex;
+  justify-content: space-between;
+  align-content: center;
+}
+.soc-menu__item {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.22;
+  letter-spacing: 0.02em;
+}
+.soc-menu__link {
+  color: var(--accent-color);
+  &::after {
+    content: "";
+    width: 22px;
+    height: 0;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    transform: rotate(90deg);
     position: relative;
-    transition: color var(--time) var(--cubic-bezier);
-    &:hover,
-    &:focus {
-      color: var(--accent-color);
-    }
+    margin-left: 10px;
+  }
+}
+.menu__link {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  position: relative;
+  transition: color var(--time) var(--cubic-bezier);
+  color: var(--primary-text-color);
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
   }
 }
 .menu__page-link {
-  @media screen and (min-width: 768px) {
-    color: var(--accent-color);
-  }
+  color: var(--accent-color);
 }
 .menu__link.menu__page-link::after {
   @media screen and (min-width: 768px) {
@@ -150,16 +238,12 @@
   }
 }
 .menu__link--color {
-  @media screen and (min-width: 768px) {
-    color: var(--secondary-title-color);
-  }
+  color: var(--secondary-title-color);
 }
 
 .menu__item {
-  @media screen and (min-width: 768px) {
-    &:not(:last-child) {
-      margin-right: 50px;
-    }
+  &:not(:last-child) {
+    margin-right: 50px;
   }
 }
 .contacts__tel {
