--- a/css/main.css
+++ b/css/main.css
@@ -775,31 +775,49 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  max-width: 1600px;
   margin: auto;
-  padding-top: 200px;
-  padding-bottom: 200px;
+  padding-top: 118px;
+  padding-bottom: 118px;
+}
+
+@media screen and (min-width: 1200px) {
+  .hero {
+    max-width: 1600px;
+    padding-top: 200px;
+    padding-bottom: 200px;
+  }
 }
 
 .hero-title {
   font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
+  font-size: 26px;
+  line-height: 1.62;
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: var(--primary-title-color);
-  width: 696px;
+  width: 360px;
   margin: 0 auto;
   margin-bottom: 30px;
 }
 
-.about {
-  padding-top: 94px;
-  padding-bottom: 94px;
+@media screen and (min-width: 1200px) {
+  .hero-title {
+    font-size: 44px;
+    line-height: 1.36;
+    width: 696px;
+  }
 }
 
-.about-icons {
-  display: flex;
+.about {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+@media screen and (min-width: 1200px) {
+  .about {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .about-icons-list {
@@ -813,12 +831,25 @@ body {
   justify-content: center;
 }
 
-.about-icons-list:not(:last-child) {
-  margin-right: 30px;
+@media screen and (min-width: 768px) {
+  .about-icons-list:not(:last-child) {
+    margin-right: 30px;
+  }
 }
 
 .about-list {
   display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+@media screen and (min-width: 768px) {
+  .about-list {
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin-right: -30px;
+    margin-top: -30px;
+  }
 }
 
 .about-item {
@@ -839,11 +870,21 @@ body {
 }
 
 .about-flex {
-  width: 270px;
+  width: 450px;
 }
 
-.about-flex:not(:last-child) {
-  margin-right: 30px;
+@media screen and (min-width: 768px) {
+  .about-flex {
+    width: 354px;
+    margin-right: 30px;
+    margin-top: 30px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .about-flex {
+    width: 270px;
+  }
 }
 
 .about-two {
