--- a/scss/layout/_about.scss
+++ b/scss/layout/_about.scss
@@ -1,47 +1,63 @@
 .about {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  @media screen and (min-width: 1200px) {
     padding-top: 94px;
     padding-bottom: 94px;
   }
-  .about-icons {
-    display: flex;
-  }
-  .about-icons-list {
-    width: 100%;
-    height: 120px;
-    background-color: #f5f4fa;
-    border-radius: 4px;
-    margin-bottom: 30px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+}
+
+.about-icons-list {
+  width: 100%;
+  height: 120px;
+  background-color: #f5f4fa;
+  border-radius: 4px;
+  margin-bottom: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  @media screen and (min-width: 768px) {
     &:not(:last-child) {
       margin-right: 30px;
     }
   }
-  
-  .about-list {
-    display: flex;
+}
+
+.about-list {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  @media screen and (min-width: 768px) {
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin-right: -30px;
+    margin-top: -30px;
   }
-  .about-item {
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    color: var(--secondary-title-color);
-    margin-bottom: 10px;
+}
+.about-item {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--secondary-title-color);
+  margin-bottom: 10px;
+}
+.about-text {
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: var(--primary-text-color);
+}
+.about-flex {
+  width: 450px;
+  @media screen and (min-width: 768px) {
+    width: 354px;
+    margin-right: 30px;
+    margin-top: 30px;
   }
-  .about-text {
-    font-size: 14px;
-    line-height: 1.71;
-    letter-spacing: 0.03em;
-    color: var(--primary-text-color);
-  }
-  .about-flex {
+  @media screen and (min-width: 768px) {
     width: 270px;
-    &:not(:last-child) {
-      margin-right: 30px;
-    }
   }
- 
-  
+}
