--- a/scss/layout/_hero.scss
+++ b/scss/layout/_hero.scss
@@ -1,28 +1,36 @@
 .hero {
-    text-align: center;
-    background-image: linear-gradient(
-        rgba(47, 48, 58, 0.4),
-        rgba(47, 48, 58, 0.4)
-      ),
-      url(../img/hero-img.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
+  text-align: center;
+  background-image: linear-gradient(
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url(../img/hero-img.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  margin: auto;
+  padding-top: 118px;
+  padding-bottom: 118px;
+  @media screen and (min-width: 1200px) {
     max-width: 1600px;
-    margin: auto;
     padding-top: 200px;
     padding-bottom: 200px;
   }
-  
-  .hero-title {
-    font-weight: 900;
+}
+
+.hero-title {
+  font-weight: 900;
+  font-size: 26px;
+  line-height: 1.62;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+  color: var(--primary-title-color);
+  width: 360px;
+  margin: 0 auto;
+  margin-bottom: 30px;
+  @media screen and (min-width: 1200px) {
     font-size: 44px;
     line-height: 1.36;
-    letter-spacing: 0.06em;
-    text-transform: uppercase;
-    color: var(--primary-title-color);
     width: 696px;
-    margin: 0 auto;
-    margin-bottom: 30px;
   }
-  
+}
