--- a/scss/layout/_about.scss
+++ b/scss/layout/_about.scss
@@ -52,10 +52,14 @@
 }
 .about-flex {
   width: 450px;
+  &:not(:last-child) {
+    margin-bottom: 30px;
+  }
   @media screen and (min-width: 768px) {
     width: 354px;
     margin-right: 30px;
     margin-top: 30px;
+    margin-bottom: 0;
   }
   @media screen and (min-width: 768px) {
     width: 270px;
