--- a/scss/components/_btn.scss
+++ b/scss/components/_btn.scss
@@ -37,4 +37,8 @@
   .footer-btn {
     position: relative;
     padding-right: 13px;
+    margin-top: 20px;
+    @media screen and (min-width: 1200px) {
+      margin-top: 0;
+    }
   }
