--- a/css/main.css
+++ b/css/main.css
@@ -114,6 +114,13 @@ body {
 .footer-btn {
   position: relative;
   padding-right: 13px;
+  margin-top: 20px;
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-btn {
+    margin-top: 0;
+  }
 }
 
 .social {
@@ -128,6 +135,13 @@ body {
 
 .social-list {
   display: flex;
+  justify-content: center;
+}
+
+@media screen and (min-width: 1200px) {
+  .social-list {
+    justify-content: start;
+  }
 }
 
 .social-list-team {
@@ -395,7 +409,7 @@ body {
 }
 
 .form-input {
-  width: 358px;
+  width: 450px;
   height: 50px;
   padding-left: 16px;
   margin-right: 12px;
@@ -411,6 +425,12 @@ body {
   line-height: 1.25;
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
+}
+
+@media screen and (min-width: 1200px) {
+  .form-input {
+    width: 358px;
+  }
 }
 
 .icon-send {
@@ -954,12 +974,19 @@ body {
 
 .team-title {
   font-weight: 700;
-  font-size: 36px;
-  line-height: 1.17;
+  font-size: 28px;
+  line-height: 1.18;
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--secondary-title-color);
   margin-bottom: 50px;
+}
+
+@media screen and (min-width: 1200px) {
+  .team-title {
+    font-size: 36px;
+    line-height: 1.17;
+  }
 }
 
 .team-list {
@@ -981,14 +1008,12 @@ body {
   background-color: #ffffff;
   border-radius: 0px 0px 4px 4px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-  margin-bottom: 30px;
 }
 
 @media screen and (min-width: 768px) {
   .team-item {
     margin-right: 30px;
     margin-top: 30px;
-    margin-bottom: 0;
   }
 }
 
@@ -1016,31 +1041,58 @@ body {
 }
 
 .clients {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+@media screen and (min-width: 1200px) {
+  .clients {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .clients-title {
   font-weight: 700;
-  font-size: 36px;
-  line-height: 1.17;
+  font-size: 28px;
+  line-height: 1.18;
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--secondary-title-color);
   margin-bottom: 50px;
 }
 
+@media screen and (min-width: 1200px) {
+  .clients-title {
+    font-size: 36px;
+    line-height: 1.17;
+  }
+}
+
 .clients-list {
   display: flex;
+  flex-wrap: wrap;
+  margin-right: -30px;
+  margin-top: -30px;
 }
 
 .clients-item {
-  width: 170px;
+  width: 210px;
   height: 92px;
+  margin-right: 30px;
+  margin-top: 30px;
 }
 
-.clients-item:not(:last-child) {
-  margin-right: 30px;
+@media screen and (min-width: 768px) {
+  .clients-item {
+    width: 226px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .clients-item {
+    width: 170px;
+  }
 }
 
 .clients-link {
@@ -1142,28 +1194,77 @@ body {
   background-color: var(--background-color);
   padding-top: 60px;
   padding-bottom: 60px;
+  text-align: center;
+}
+
+@media screen and (min-width: 1200px) {
+  .footer {
+    text-align: start;
+  }
 }
 
 .footer-cont {
   display: flex;
-  align-items: baseline;
+  flex-direction: column;
+  justify-content: center;
+}
+
+@media screen and (min-width: 768px) {
+  .footer-cont {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-cont {
+    flex-wrap: nowrap;
+    align-items: baseline;
+  }
 }
 
 .footer-left {
-  margin-right: 70px;
+  margin-bottom: 60px;
+}
+
+@media screen and (min-width: 768px) {
+  .footer-left {
+    margin-right: 165px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-left {
+    margin-right: 70px;
+    margin-bottom: 0;
+  }
 }
 
 .footer-right {
-  margin-right: 93px;
+  margin-bottom: 60px;
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-right {
+    margin-right: 93px;
+    margin-bottom: 0;
+  }
 }
 
 .footer-logo {
   font-family: Raleway;
   font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
+  font-size: 24px;
+  line-height: 1.17;
   letter-spacing: 0.03em;
   color: var(--accent-color);
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-logo {
+    font-size: 26px;
+    line-height: 1.19;
+  }
 }
 
 .footer-studio {
@@ -1171,7 +1272,13 @@ body {
 }
 
 .footer-item:not(:last-child) {
-  margin-bottom: 9px;
+  margin-bottom: 8px;
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-item:not(:last-child) {
+    margin-bottom: 9px;
+  }
 }
 
 .footer-link {
@@ -1184,5 +1291,17 @@ body {
 
 .footer-link:hover, .footer-link:focus {
   color: var(--accent-color);
+}
+
+.form-btn {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+@media screen and (min-width: 1200px) {
+  .form-btn {
+    flex-direction: row;
+  }
 }
 /*# sourceMappingURL=main.css.map */
