--- a/scss/components/_form.scss
+++ b/scss/components/_form.scss
@@ -1,5 +1,5 @@
 .form-input {
-    width: 358px;
+    width: 450px;
     height: 50px;
     padding-left: 16px;
     margin-right: 12px;
@@ -13,6 +13,9 @@
       line-height: 1.25;
       letter-spacing: 0.03em;
       color: rgba(255, 255, 255, 0.6);
+    }
+    @media screen and (min-width: 1200px) {
+      width: 358px;
     }
   }
  
