--- a/scss/components/_social.scss
+++ b/scss/components/_social.scss
@@ -10,7 +10,10 @@
 
 .social-list {
   display: flex;
-}
+  justify-content: center;
+  @media screen and (min-width: 1200px) {
+    justify-content: start;
+}}
 .social-list-team {
   margin-top: 16px;
   justify-content: center;
