--- a/scss/layout/_team.scss
+++ b/scss/layout/_team.scss
@@ -9,12 +9,16 @@
 }
 .team-title {
   font-weight: 700;
-  font-size: 36px;
-  line-height: 1.17;
+  font-size: 28px;
+line-height: 1.18;
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--secondary-title-color);
   margin-bottom: 50px;
+  @media screen and (min-width: 1200px) {
+    font-size: 36px;
+    line-height: 1.17;
+  }
 }
 .team-list {
   display: flex;
@@ -32,11 +36,9 @@
   border-radius: 0px 0px 4px 4px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
-  margin-bottom: 30px;
   @media screen and (min-width: 768px) {
     margin-right: 30px;
     margin-top: 30px;
-    margin-bottom: 0;
   }
 }
 
