--- a/scss/components/_filters.scss
+++ b/scss/components/_filters.scss
@@ -1,11 +1,20 @@
 .filters {
     display: flex;
-    justify-content: center;
+    flex-wrap: wrap;
+    margin-bottom: 40px;
+    margin-top: -15px;
+    margin-right: -8px;
+    @media screen and (min-width: 768px) {
+      justify-content: center;
+    margin-bottom: 30px;
+    }
+    @media screen and (min-width: 1200px) {
     margin-bottom: 50px;
+    }
   }
   
   .filters-item{
-    &:not(:last-child) {
+    margin-top: 15px;
     margin-right: 8px;
-  }
+  
 }
