--- a/scss/layout/_hero.scss
+++ b/scss/layout/_hero.scss
@@ -4,7 +4,7 @@
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url(../../img/hero-img-mob.jpeg);
+    url(../../img/hero/hero-img-mob.jpeg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -20,7 +20,7 @@
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url(../../img/hero-img-mob@2x.jpeg);
+    url(../../img/hero/hero-img-mob@2x.jpeg);
   }
   @media screen and (min-width: 481px) {
     max-width: 768px;
@@ -28,7 +28,7 @@
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url(../../img/hero-img-tablet.jpeg);
+    url(../../img/hero/hero-img-tablet.jpeg);
     @media (min-device-pixel-ratio: 2),
   (min-resolution: 192dpi),
   (min-resolution: 2dppx) {
@@ -36,7 +36,7 @@
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url(../../img/hero-img-tablet@2x.jpeg);
+    url(../../img/hero/hero-img-tablet@2x.jpeg);
   }
   }
   @media screen and (min-width: 769px) {
@@ -48,7 +48,7 @@
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url(../../img/hero-img-desk.jpeg);
+    url(../../img/hero/hero-img-desk.jpeg);
     @media (min-device-pixel-ratio: 2),
   (min-resolution: 192dpi),
   (min-resolution: 2dppx) {
@@ -56,7 +56,7 @@
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url(../../img/hero-img-desk@2x.jpeg);
+    url(../../img/hero/hero-img-desk@2x.jpeg);
   }
   }
 }
